--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^19.2.0",
     "react-i18next": "^16.4.0",
     "sonner": "^2.0.7",
-    "universal-cookie": "^8.0.1"
+    "universal-cookie": "^8.0.1",
+    "use-media": "^1.5.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
